--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = [
     { name = "Claudio Santini", email = "hireclaudio@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "ebooklib (>=0.18,<0.19)",
     "soundfile (>=0.13.1,<0.14.0)",
     "pick (>=2.4.0,<3.0.0)",
     "bs4 (>=0.0.2,<0.0.3)",
     "spacy (>=3.8.3,<4.0.0)",
-    "kokoro (>=0.7.9,<0.8.0)",
-    "misaki[zh] (>=0.7.10,<0.8.0)",
+    "kokoro (==0.9.2)",
+    "misaki[zh] (>=0.9.2)",
     "tabulate (>=0.9.0,<0.10.0)",
+    "epub-toc (>=1.0.0,<2.0.0)",
 ]
 exclude = [
     "imgs",
