--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,11 @@ dependencies = [
     "pick (>=2.4.0,<3.0.0)",
     "bs4 (>=0.0.2,<0.0.3)",
     "spacy (>=3.8.3,<4.0.0)",
-    "kokoro (==0.9.2)",
+    "kokoro (==0.9.4)",
     "misaki[zh] (>=0.9.2)",
     "tabulate (>=0.9.0,<0.10.0)",
     "epub-toc (>=1.0.0,<2.0.0)",
+    "qwen-tts (>=0.1.1,<0.2.0)",
 ]
 exclude = [
     "imgs",
